cleaned up (removed authors from the file)

--- a/THANKS
+++ b/THANKS
@@ -1,22 +1,20 @@
 rcssserver3D THANKS file
 
-rcssserver3D has originally been written by Marco Kögler and by the people
-listed in the AUTHORS file.
-Many people further contributed to rcssserver3D by reporting
-problems, suggesting various improvements or submitting actual
-code. Here is a list of these people. Help us keep it complete and
-exempt of errors.
+rcssserver3D has originally been written by Marco Kögler, Oliver Obst
+and Markus Rollmann, and by the people listed in the AUTHORS file.
+
+Many people further contributed to rcssserver3D by reporting problems,
+suggesting various improvements or submitting actual code. Here is a
+list of these people (people listed already as authors are not
+repeated here). Help us keep it complete and exempt of errors.
 
 Christian Bayha <christian.bayha@gmx.de>
 Alexander Fuchs <alexf@uni-koblenz.de>
 Markus Gründler <mgruendler@gmx.de>
-Patrick Riley <pfr+@cs.cmu.edu>
-Christoph Ringelstein <cringel@uni-koblenz.de>
 Kenny Tilton <ktilton@nyc.rr.com>
 Micha Gollin <gollin@informatik.hu-berlin.de>
 Alexey Vasilyev <servent@apollo.lv>
 Aria3D simulation team <robotics@ce.aut.ac.ir>
 liyang <subwood@ustc.edu>
 Michel Tokic
-Hesham Ebrahimi <heshamebrahimi@gmail.com>
 Jackson Matsuura <jackson@ita.br>
