*** empty log message ***

--- a/THANKS
+++ b/THANKS
@@ -1,6 +1,6 @@
 rcssserver3D THANKS file
 
-rcssserver3D has originally been written by Marco Koegler, Oliver Obst
+rcssserver3D has originally been written by Marco Kögler, Oliver Obst
 and Markus Rollmann, and by the people listed in the AUTHORS file.
 
 Many people further contributed to rcssserver3D by reporting problems,
@@ -10,7 +10,7 @@ repeated here). Help us keep it complete and exempt of errors.
 
 Christian Bayha <christian.bayha@gmx.de>
 Alexander Fuchs <alexf@uni-koblenz.de>
-Markus Gruendler <mgruendler@gmx.de>
+Markus Gründler <mgruendler@gmx.de>
 Kenny Tilton <ktilton@nyc.rr.com>
 Micha Gollin <gollin@informatik.hu-berlin.de>
 Alexey Vasilyev <servent@apollo.lv>
