* THANKS:   added Ali N.

--- a/THANKS
+++ b/THANKS
@@ -20,3 +20,5 @@ Michel Tokic
 Jackson Matsuura <jackson@ita.br>
 Arne Stahlbock <wolf359@informatik.uni-bremen.de>
 Philipp Vorst <vorst@i5.informatik.rwth-aachen.de>
+Ma Jie <me@goodma.com>
+Ali Nadalizadeh <nadalisoft@yahoo.com>
