added Yuan Xu and Nima Aghaeepour

--- a/THANKS
+++ b/THANKS
@@ -22,3 +22,5 @@ Arne Stahlbock <wolf359@informatik.uni-bremen.de>
 Philipp Vorst <vorst@i5.informatik.rwth-aachen.de>
 Ma Jie <me@goodma.com>
 Ali Nadalizadeh <nadalisoft@yahoo.com>
+Yuan Xu <xuyuan.cn@gmail.com>
+Nima Aghaeepour <Nimaa@khayam.ut.ac.ir>
