--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-rcssserver3D-0.5.2 README
+rcssserver3D-0.5.3 README
 
 General Information
 
@@ -119,4 +119,4 @@ Literature:
 ---------------------------------------------------------------------
 
 Oliver Obst
-Last modified: Wed May 12 19:04:09 CEST 2004
+Last modified: Mo Feb 12 16:27:09 CEST 2007
